<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.settings.SettingsFragment">

   <LinearLayout
       android:layout_width="match_parent"
       android:orientation="vertical"
       android:layout_height="wrap_content">
       <androidx.constraintlayout.widget.ConstraintLayout
           android:id="@+id/account_layout"
           android:layout_width="match_parent"
           android:layout_height="wrap_content">

           <TextView
               android:id="@+id/textView7"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:text="@string/info"
               android:textColor="@color/black"
               android:textSize="20sp"
               android:layout_margin="10dp"
               app:layout_constraintTop_toTopOf="parent" />

           <TextView
               android:id="@+id/account_name"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="@string/name"
               android:textSize="18sp"
               android:textColor="@color/black"
               android:layout_margin="20dp"
               app:layout_constraintStart_toStartOf="parent"
               app:layout_constraintTop_toBottomOf="@+id/textView7" />

           <ImageView
               android:id="@+id/open_dialog"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:src="@drawable/ic_edit"
               android:layout_marginTop="22dp"
               android:layout_marginLeft="10dp"
               android:tint="@color/grey"
               app:layout_constraintStart_toEndOf="@+id/account_name"
               app:layout_constraintTop_toBottomOf="@+id/textView7" />

           <TextView
               android:id="@+id/account_num"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_marginStart="10dp"
               android:text="@string/phone"
               android:textSize="18sp"
               android:layout_margin="20dp"
               app:layout_constraintStart_toStartOf="parent"
               app:layout_constraintTop_toBottomOf="@+id/account_name" />

           <TextView
               android:id="@+id/account_balance"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_margin="20dp"
               android:text="0"
               android:textColor="@color/black"
               android:textSize="18sp"
               app:layout_constraintStart_toEndOf="@+id/account_balance1"
               app:layout_constraintTop_toBottomOf="@+id/account_num" />

           <ImageView
               android:id="@+id/open_balance"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:src="@drawable/ic_edit"
               android:tint="@color/grey"
               android:layout_marginTop="20dp"
               app:layout_constraintStart_toEndOf="@+id/account_balance"
               app:layout_constraintTop_toBottomOf="@+id/account_num" />
           <TextView
               android:id="@+id/account_balance1"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_margin="20dp"
               android:text="@string/balance"
               android:textSize="18sp"
               app:layout_constraintStart_toStartOf="parent"
               app:layout_constraintTop_toBottomOf="@+id/account_num" />

           <View
               android:id="@+id/line4"
               android:layout_width="match_parent"
               android:layout_height="1dp"
               android:layout_margin="20dp"
               android:background="@color/grey"
               app:layout_constraintTop_toBottomOf="@+id/account_balance"
               tools:layout_editor_absoluteX="20dp" />

           <TextView
               android:id="@+id/textView8"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:layout_margin="10dp"
               android:visibility="gone"
               android:text="@string/password_change"
               android:textColor="@color/black"
               android:textSize="20sp"
               app:layout_constraintTop_toBottomOf="@+id/line4" />

           <TextView
               android:id="@+id/textView9"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_margin="10dp"
               android:text="@string/old_password"
               android:textSize="15sp"
               android:visibility="gone"
               app:layout_constraintStart_toStartOf="parent"
               app:layout_constraintTop_toBottomOf="@+id/textView8" />

           <EditText
               android:id="@+id/user_old_password"
               android:layout_width="match_parent"
               android:layout_height="40dp"
               android:layout_margin="10dp"
               android:visibility="gone"
               app:layout_constraintEnd_toEndOf="parent"
               app:layout_constraintStart_toStartOf="parent"
               app:layout_constraintTop_toBottomOf="@+id/textView9" />

           <TextView
               android:id="@+id/textView11"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_margin="10dp"
               android:text="@string/new_password"
               android:visibility="gone"
               android:textSize="15sp"
               app:layout_constraintStart_toStartOf="parent"
               app:layout_constraintTop_toBottomOf="@+id/user_old_password" />

           <EditText
               android:id="@+id/User_new_password"
               android:layout_width="match_parent"
               android:layout_height="40dp"
               android:layout_margin="10dp"
               app:layout_constraintEnd_toEndOf="parent"
               android:visibility="gone"
               app:layout_constraintStart_toStartOf="parent"
               app:layout_constraintTop_toBottomOf="@+id/textView11" />

           <View
               android:id="@+id/line5"
               android:layout_width="match_parent"
               android:layout_height="1dp"
               android:layout_margin="20dp"
               android:visibility="gone"
               android:background="@color/grey"
               app:layout_constraintTop_toBottomOf="@+id/User_new_password" />

           <TextView
               android:id="@+id/exit_account"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_margin="20dp"
               android:textSize="15sp"
               android:text="@string/exit_account"
               app:layout_constraintStart_toStartOf="parent"
               app:layout_constraintTop_toBottomOf="@id/line5" />

       </androidx.constraintlayout.widget.ConstraintLayout>

       <Button
           android:id="@+id/open_registration"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_gravity="center"
           android:background="@color/colorPrimary"
           android:textColor="@color/white"
           android:padding="10dp"
           android:layout_margin="20dp"
           android:text="@string/create_account"/>
   </LinearLayout>

</ScrollView>